DevOps_Hands-on/Kubernetes/Deploying_Applications_on_Kubernetes(Final))/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: jeevan2001/backend:latest
        ports:
        - containerPort: 3000
      volumes:
      - name: init-sql
        configMap:
          name: init-sql-config
