DevOps_Hands-on/Kubernetes/Deploying_Applications_on_Kubernetes(Final))/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: jeevan2001/frontend:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
