DevOps_Hands-on/Kubernetes/Deploying_Applications_on_Kubernetes(Final))/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
  selector:
    app: grafana
