DevOps_Hands-on/Kubernetes/Deploying_Applications_on_Kubernetes(Final))/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
    nodePort: 30000
  selector:
    app: prometheus
